--- a/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" href="#">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="DanhMucs" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#people"></use>
                         </svg>
@@ -75,7 +75,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" href="#">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="NhanViens" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#cart"></use>
                         </svg>
@@ -96,30 +96,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" href="#">
-                        <svg class="bi" aria-hidden="true">
-                            <use xlink:href="#cart"></use>
-                        </svg>
-                        Trả sách
-                    </a>
-                </li>
-            </ul>
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-2 mb-1 text-body-secondary text-uppercase">
-                <span>Phạt</span>
-            </h6>
-            <ul class="nav flex-column">
-                <li class="nav-item">
                     <a class="nav-link d-flex align-items-center gap-2" asp-controller="PhieuPhats" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#file-earmark"></use>
-                        </svg>
-                        Phiếu phạt
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" href="#">
-                        <svg class="bi" aria-hidden="true">
-                            <use xlink:href="#cart"></use>
                         </svg>
                         Phiếu phạt
                     </a>
