--- a/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Index.cshtml
@@ -5,80 +5,35 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="d-flex justify-content-between mb-3">
+    <h2>Nhân viên</h2>
+    <a asp-action="Create" class="btn btn-success">+ Thêm nhân viên</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MaNhanVien)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HoTen)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NgaySinh)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CCCD)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ChucVu)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SoDienThoai)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TaiKhoan)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MatKhau)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>Mã</th>
+        <th>Họ tên</th>
+        <th>Chức vụ</th>
+        <th>Email</th>
+        <th class="text-end">Thao tác</th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var nv in Model)
+    {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaNhanVien)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HoTen)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgaySinh)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CCCD)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ChucVu)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SoDienThoai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TaiKhoan)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MatKhau)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td>@nv.MaNhanVien</td>
+            <td>@nv.HoTen</td>
+            <td>@nv.ChucVu</td>
+            <td>@nv.Email</td>
+            <td class="text-end">
+                <a asp-action="Details" asp-route-id="@nv.Id" class="btn btn-sm btn-outline-primary">Chi tiết</a>
+                <a asp-action="Edit" asp-route-id="@nv.Id" class="btn btn-sm btn-outline-secondary ms-1">Sửa</a>
+                <a asp-action="Delete" asp-route-id="@nv.Id" class="btn btn-sm btn-outline-danger ms-1">Xóa</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
